packages/travelr-be/kubernetes/spec/travelr-api-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: travelr-api-svc # この名前でpodから名前解決できる
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: travelr-api
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: travelr-api-dpl
spec:
  replicas: 2
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: travelr-api
    spec: # pod spec
      containers:
        - name: travelr-api
          image: asia.gcr.io/kubernetes-206923/travelr-api:1.1.0
          resources:
            requests:
              cpu: 0
              memory: 0
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /readiness
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 1
