packages/travelr-be/kubernetes/spec/travelr-be-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: travelr-be-svc # この名前でpodから名前解決できる
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: travelr-be
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: travelr-be-dpl
spec:
  replicas: 1
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: travelr-be
    spec: # pod spec
      containers:
      - name: travelr-be
        image: asia.gcr.io/kubernetes-206923/travelr-be:1.0.2
        resources:
          requests:
            cpu: 0
            memory: 0
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
