packages/travelr-be/kubernetes/spec/travelr-pgadmin-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: travelr-pgadmin-svc # この名前でpodから名前解決できる
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: travelr-pgadmin
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: travelr-pgadmin-dpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: travelr-pgadmin
    spec:
      volumes:
        - name: volume-travelr-pgadmin
          persistentVolumeClaim:
            claimName: pvc-travelr-pgadmin
      containers:
        - name: travelr-pgadmin
          image: dpage/pgadmin4:3.5
          resources:
            requests:
              cpu: 0
              memory: 0
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: '/var/lib/pgadmin'
              name: volume-travelr-pgadmin
          # Ingressのバックエンドとして使うためには必須
          readinessProbe:
            httpGet:
              path: /login?next=%2F
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 1
