packages/travelr-be/kubernetes/spec/deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: pgadmin4-svc
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc # この名前でpodから名前解決できる
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-svc # この名前でpodから名前解決できる
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: pgadmin4
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: postgres-dpl
spec:
  replicas: 1
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: postgres
    spec: # pod spec
      volumes:
      - name: volume-postgres
        persistentVolumeClaim:
          claimName: pvc-postgres
      containers:
      - name: postgres
        image: mdillon/postgis:10-alpine
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: volume-postgres
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -h
            - localhost
            - -U
            - postgres
          initialDelaySeconds: 5
          timeoutSeconds: 1
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: pgadmin4-dpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      volumes:
      - name: volume-pgadmin4
        persistentVolumeClaim:
          claimName: pvc-pgadmin4
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/var/lib/pgadmin"
            name: volume-pgadmin4
        # Ingressのバックエンドとして使うためには必須
        readinessProbe:
          httpGet:
            path: /login?next=%2F
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 1
