packages/travelr-be/kubernetes/spec/my-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx # この一文を入れると、Ingressはロードバランサを作成しない。
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: pgadmin4-tls
    hosts:
    - pgadmin4.yuuniworks.com
  - secretName: travelr-be-tls
    hosts:
    - travelr-be.yuuniworks.com
  rules:
  - host: pgadmin4.yuuniworks.com
    http:
      paths:
      - backend:
          serviceName: travelr-pgadmin-svc
          servicePort: 80
  - host: travelr-be.yuuniworks.com
    http:
      paths:
      - backend:
          serviceName: travelr-api-svc
          servicePort: 80
